--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="buttons">
       <input id="imageName" type="text" placeholder="Image name " />
       <input type="text" name="" id="ImageLink" placeholder="Image link" />
-      <button id="loginButton" onclick="addImage()">Send</button>
+      <button id="loginButton" onclick="addImage() " style="background-color: green;">Send</button>
       <button id="loginButton" onclick="fetchImages()">Show all</button>
     </div>
     <div class="container">
